objects/LiveText__ScreenPopSequence__c.object
<CustomObject>
    <description>The order that LiveMessage will pop records to LiveMessage agents after an inbound text is accepted.</description>
    <fields>
        <fullName>LiveText__LiveText_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>LiveMessage Phone Number</description>
        <label>LiveMessage Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>ScreenPopSequence</relationshipLabel>
        <relationshipName>ScreenPopSequence</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Record_Type__c</fullName>
        <description>Record Type (Account, Contact, Lead, etc.)</description>
        <label>Record Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Screen Pop Sequence</label>
    <nameField>
        <label>ScreenPopSequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Pop Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>